--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -23,7 +23,9 @@ This feature is enabled in the Agent by default, with <<config-central-config>>.
 
 [[configuration-on-asp-net-core]]
 === Configuration on ASP.NET Core
-The `UseElasticApm()` extension method offers an overload to pass an `IConfiguration` instance to the APM Agent. By using this overload in a typical ASP.NET Core application, the `Startup.cs` file would contain code similar to the following:
+
+The `UseElasticApm()` extension method offers an overload to pass an `IConfiguration` instance to the APM Agent.
+To use this type of setup, which is typical in an ASP.NET Core application, your application's `Startup.cs` file should contain code similar to the following:
 
 [source,csharp]
 ----
@@ -46,34 +48,30 @@ public class Startup
 }
 ----
 
-NOTE: As explained in <<setup-asp-net-core>>, the `UseElasticApm` method only turns on ASP.NET Core monitoring. If you want to turn on everything (including HTTP and Database monitoring) you can use the `UseAllElasticApm` method from the `Elastic.Apm.NetCoreAll` package, which has the same overloads and behavior, except it turns on tracing for everything that is supported by the agent on .NET Core including database and HTTP tracing.
-
 With this you can use any configuration source that you configured on the `IConfiguration` instance that you passed to the APM Agent.
-You can find the key of each configuration option
-in the `IConfiguration or Web.config key` column of the corresponding option's description.
+You can find the key for each APM configuration option in this documentation, under the `IConfiguration or Web.config key` column of the option's description.
 
-NOTE: By simply calling `app.UseElasticApm()` without the overload, the agent will read configurations only from environment variables.
+NOTE: It is also possible to call `UseElasticApm()` without the overload. In this case, the agent will only read configurations from environment variables.
+
+NOTE: The `UseElasticApm` method only turns on ASP.NET Core monitoring. To turn on tracing for everything supported by the Agent on .NET Core, including HTTP and database monitoring, use the `UseAllElasticApm` method from the `Elastic.Apm NetCoreAll` package. Learn more in <<setup-asp-net-core,ASP.NET Core setup>>.
 
 [float]
 [[sample-config]]
 ==== Sample configuration file
 
-Below is a sample `appsettings.json` configuration file for a typical ASP.NET Core application. There are two important takeaways:
-
-1. The part below `ElasticApm` is fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
-2. With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
+Here is a sample `appsettings.json` configuration file for a typical ASP.NET Core application. There are two important takeaways, which are listed as callouts below the example:
 
 [source,js]
 ----
 {
   "Logging": {
-    "LogLevel": {
+    "LogLevel": { <1>
       "Default": "Warning",
       "Elastic.Apm": "Debug"
     }
   },
   "AllowedHosts": "*",
-  "ElasticApm":
+  "ElasticApm": <2>
     {
       "ServerUrls":  "http://myapmserver:8200",
       "SecretToken":  "apm-server-secret-token",
@@ -81,8 +79,10 @@ Below is a sample `appsettings.json` configuration file for a typical ASP.NET Co
     }
 }
 ----
+<1> With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
+<2> The configurations below `ElasticApm` are fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
 
-In certain scenarios -- like when you're not using ASP.NET Core -- you wont activate the agent with the `UseElasticApm()` method.
+In certain scenarios--like when you're not using ASP.NET Core--you wont activate the agent with the `UseElasticApm()` method.
 In this case, you can set the log level of the agent with <<config-log-level,`ElasticApm:LogLevel`>>, as shown in the following `appsettings.json` file:
 
 [source,js]
