--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -59,7 +59,7 @@ NOTE: The `UseElasticApm` method only turns on ASP.NET Core monitoring. To turn 
 [[sample-config]]
 ==== Sample configuration file
 
-Here is a sample `appsettings.json` configuration file for a typical ASP.NET Core application. There are two important takeaways, which are listed as callouts below the example:
+Here is a sample `appsettings.json` configuration file for a typical ASP.NET Core application that has been activated with `UseElasticApm()`. There are two important takeaways, which are listed as callouts below the example:
 
 [source,js]
 ----
@@ -82,8 +82,8 @@ Here is a sample `appsettings.json` configuration file for a typical ASP.NET Cor
 <1> With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
 <2> The configurations below `ElasticApm` are fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
 
-In certain scenarios--like when you're not using ASP.NET Core--you wont activate the agent with the `UseElasticApm()` method.
-In this case, you can set the log level of the agent with <<config-log-level,`ElasticApm:LogLevel`>>, as shown in the following `appsettings.json` file:
+In certain scenarios--like when you're not using ASP.NET Core--you won't activate the agent with the `UseElasticApm()` method.
+In this case, you can set the agent's log level with <<config-log-level,`ElasticApm:LogLevel`>>, as shown in the following `appsettings.json` file:
 
 [source,js]
 ----
