--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -79,7 +79,7 @@ Here is a sample `appsettings.json` configuration file for a typical ASP.NET Cor
     }
 }
 ----
-<1> With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `ElasticApm` category name.
+<1> With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `Elastic.Apm` category name.
 <2> The configurations below `ElasticApm` are fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
 
 In certain scenarios--like when you're not using ASP.NET Core--you won't activate the agent with the `UseElasticApm()` method.
