--- a/docs/supported-technologies.asciidoc
+++ b/docs/supported-technologies.asciidoc
@@ -54,6 +54,23 @@ We support automatic instrumentation for the following web frameworks.
 
 
 [float]
+[[supported-rpc-frameworks]]
+=== RPC Frameworks
+
+The agent supports gRPC on .NET Core both on the client and the server side. Every gRPC call is automatically captured by the agent. 
+
+Streaming is not supported. In practice this means for streaming use-cases the agent does not create transactions and spans automatically.
+
+|===
+|Framework |Supported versions |Supported since agent's version
+
+|gRPC on .NET Core
+|2.23.2 and later
+|1.7
+|===
+
+
+[float]
 [[supported-data-access-technologies]]
 === Data access technologies
 
@@ -72,6 +89,10 @@ We support automatic instrumentation for the following data access technologies.
 |A DB span is automatically created for each access to underlying database performed by Entity Framework 6.
 |1.2
 
+| Elasticsearch (Elasticsearch.Net and NEST)
+| 7.6.0
+| 
+| 1.6.0
 |===
 
 [float]
