--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -639,7 +639,7 @@ This option supports the wildcard `*`, which matches zero or more characters. Ex
 
 Allows you to specify which cloud provider should be assumed for metadata collection. By default, the agent will attempt to detect the cloud provider and, if that fails, use trial and error to collect the metadata.
 
-Valid options are `"aws"`, `"gcp"`, and `"azure"`. If this config value is set to `"false"`, no cloud metadata will be collected.
+Valid options are `"aws"`, `"gcp"`, `"azure"`, and `"false"`. If this config value is set to `"false"`, no cloud metadata will be collected.
 
 [options="header"]
 |============
